--- a/Google_tests/CMakeLists.txt
+++ b/Google_tests/CMakeLists.txt
@@ -32,7 +32,16 @@ link_directories(${SDL2_TTF_LIB_DIR})
 
 # 'Google_Tests_run' is the target name
 # 'test1.cpp are source files with tests
-add_executable(Google_Tests_run test1.cpp ../src/Utilities/GlobalVars.cpp ../src/Utilities/GlobalVars.h)
+add_executable(
+        Google_Tests_run physics_test.cpp test1.cpp
+
+        # Gobal vars
+        ../src/Utilities/GlobalVars.cpp ../src/Utilities/GlobalVars.h
+
+        # For physics test
+        ../src/Physics/Hitbox.cpp ../src/Physics/Hitbox.h
+        ../src/Physics/Collision.cpp ../src/Physics/Collision.h
+)
 
 # Link Google Test libraries and SDL2 libraries
 target_link_libraries(Google_Tests_run gtest gtest_main)
